--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Clicky Clicky</title>
-    <link rel="stylesheet" href="/compiled/css/styles.css">
+    <link rel="stylesheet" href="/compiled/css/style.css">
   </head>
   <body>
     <table class="menu">
@@ -19,7 +19,7 @@
       </tr>
       <tr>
         <td class="label">Best:</td>
-        <td id="best-result' class='result">0</td>
+        <td id="best-result" class="result">0</td>
       </tr>
       <tr>
         <td class="label">Time:</td>
